--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="headerText">
             <h1>Be<br>Healthy</h1>
             <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Eget mauris at pulvinar mi, mollis eu erat. Hendrerit aliquam blandit venenatis netus posuere aptent bibendum tellus. Efficitur libero eu viverra ut; sagittis aliquet.</p>
-            <a href="#">BROWSE MENU</a> 
+            <a href="#">BROWSE MENU &#8594;</a> 
         </div>
         <div class="meals">
             <div class="meal">
